--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    text-align: center;
+    text-align: left;
 }
 
 h1 {
@@ -9,10 +9,26 @@ h1 {
 }
 
 p {
-    top: 10px;
+    
 }
 
 img {
     width: 40em;
     max-width: 90%;
 }
+
+.relative {
+    position: relative;
+    max-width: 400px;
+    height: 200px;
+    background-color: lightblue;
+  }
+
+  .absolute {
+    position: absolute;
+    top: 80px;
+    right: 10px;
+    width: 200px;
+    height: 100px;
+    background-color: steelblue;
+  }
