--- a/style.css
+++ b/style.css
@@ -1,18 +1,39 @@
-body {
+* {
     margin: 0;
     padding: 0;
-    text-align: left;
+    box-sizing: border-box;
 }
 
-h1 {
-    top: 10px;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: blue;
 }
 
-p {
-    
+.wrapper {
+    margin: 150px auto;
+    width: 70%;
+}
+
+.text-box {
+    color: white;
+}
+
+.text-box h2 {
+    font-size: 42px;
+}
+
+.text-box p {
+    font-size: 16px;
 }
 
 img {
-    width: 40em;
-    max-width: 90%;
+    max-width: 320px;
+    float: left;
+    border: 3px solid white;
+    border-radius: 10px;
+    margin-right: 15px;
 }
+
