--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
     display: flex;
-    justify-content: center;
     
+    align-items: center;
     min-height: 1920px;
     background: blue;
 }
