--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     display: flex;
-    
+    justify-content: center;
     align-items: center;
     min-height: 1920px;
     background: blue;
