--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body h1 {
+    text-align: center;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: blue;
+.size-limits {
+    max-width: 1400px;
+    margin: 40px auto 20px;
 }
 
-.wrapper {
-    margin: 150px auto;
-    width: 70%;
+.size-limits .floating-image {
+    max-width: 400px;
+}
+
+.size-limits .floating-image.right {
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 10px;
 }
 
 .text-box {
-    color: white;
+    color: green;
 }
 
 .text-box h2 {
@@ -28,12 +28,3 @@ body {
 .text-box p {
     font-size: 16px;
 }
-
-img {
-    max-width: 320px;
-    float: left;
-    border: 3px solid white;
-    border-radius: 10px;
-    margin-right: 15px;
-}
-
