--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body h1 {
     text-align: center;
+    font-size: 42px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .size-limits {
@@ -15,6 +17,8 @@ body h1 {
     float: left;
     margin-right: 20px;
     margin-bottom: 10px;
+    width: 350px;
+    border: 3px solid rgb(0, 0, 0);
 }
 
 .text-box {
@@ -22,9 +26,11 @@ body h1 {
 }
 
 .text-box h2 {
-    font-size: 42px;
+    font-size: 36px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .text-box p {
-    font-size: 16px;
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
